<resources>
    <string name="app_name">Platzigram</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="text_link_question_account">¿No tienes cuenta?,</string>
    <string name="text_link_create_account">crea una aquí</string>

    <!--=========================================================================================-->
    <!--Text - CreateAccountActivity-->
    <string name="toolbar_title_create_account">Crear Cuenta</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="hint_button_join">ÚNETE</string>
    <string name="username_card">Edwin Yovany</string>
    <string name="firstword_card">Hace</string>
    <string name="text_timecard">4 días</string>
    <string name="text_likenumbercard">10 Me Gusta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titletab_search">Buscar</string>
    <string name="titletab_home">Home</string>
    <string name="titletab_profile">Yo</string>
    <string name="titleimage_Detail">\"Todo copas en la playa\"</string>
    <string name="lorem">AYLLU fue desarrollada en la modalidad de trabajo de grado en la Universidad de Nariño, disponible para dispositivos móviles con sistema operativo Android, la herramienta permite registrar datos en campo de manera efectiva, alta disponibilidad de la información y procesamiento de datos para la toma de decisiones en pro de la conservación de este extenso y a veces remoto bien seriado.</string>
    <string name="transition_name_picture">transitionNamePicture</string>
    <string name="hint_searchview_picturealbum">Buscar aquí</string>
</resources>
