<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tabSearch"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/titletab_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tabHome"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/titletab_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tabProfile"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/titletab_profile"
        app:showAsAction="ifRoom" />
</menu>